k8s/clusters/cluster-1/manifests/network/traefik/add-ons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${INGRESS_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-chain-external@kubernetescrd
spec:
  rules:
    - host: &host "traefik.${CLUSTER_NAME}.${INGRESS_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  tls:
    - secretName: "tls.traefik-dashboard"
      hosts:
        - *host
